--- a/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/match-free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/biblioteca-libre/match-free-library.xhtml
@@ -89,7 +89,7 @@
                         <h:panelGroup styleClass="contenedor-imagen scroll-drag" layout="block">
                             <ui:repeat value="#{relacionarBiblitecaLibreControler.relacionarModeloLista}" var="relacionarModelo" varStatus="conta">
                                 <div class="imagen-relacionar uk-margin-auto ">
-                                    <img src="#{request.contextPath.concat('/imagen-glosario?palabra='.concat(relacionarModelo.palabra).concat('&amp;clave=').concat(relacionarModelo.idClaseGlosario))}" class="glosario-img" alt="imagen"/>
+                                    <img src="#{request.contextPath.concat('/imagen-glosario?palabra='.concat(relacionarModelo.palabra).concat('&amp;clave=').concat(relacionarModelo.claseGlosarioModelo.valor))}" class="glosario-img" alt="imagen"/>
                                 </div>
                                 <div class="respuesta-imagen-contenedor uk-flex uk-flex-center" uk-grid="">
                                     <div class="icono-relacion-img uk-width-auto"></div>
