--- a/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
@@ -13,7 +13,7 @@
     <h:outputStylesheet library="css" name="letra.css"/>
     <div class="flex-img">
         <div class="parrafo-img">
-           <h1 class="lescuadron">¡Ups, no encontré la página!</h1>
+           <h1 class="lescuadron">#{etiqueta['no.econtrado.title']}</h1>
         </div>
         <div class="fondo-img">
             <h:graphicImage library="img" name="/fondo/no-existe.svg" uk-svg=""/>
