glosario he imagen de vacio

--- a/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/glossary.xhtml
@@ -91,7 +91,7 @@
                 <ui:repeat value="#{glosarioControlador.glosarioModeloLista}" var="glosario">
                     <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin tam-card" uk-grid="">
                         <div class="uk-card-media-left uk-cover-container contenedor-img">
-                            <img data-llave="${glosarioControlador.carpeta.concat('/').concat(glosario.palabra.trim()).concat('_').concat(glosario.claseGlosarioModelo.valor)}" class="glosario-img" alt="imagen"/>
+                            <img data-llave="${glosarioControlador.carpeta.concat('/').concat(glosario.palabra.trim()).concat('_').concat(glosario.claseGlosarioModelo.valor)}" class="cargando" alt="imagen" src="../resources/img/alumno/esquadron-animado.svg"/>
                         </div>
                         <div>
                             <div class="uk-card-body">
