relacionar imagen biblioteca libre

--- a/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/dashboard.xhtml
@@ -102,7 +102,8 @@
                                         onevent="function grafica(data) {
                                             console.log(data.status);
                                             if (data.status === 'success')
-                                               {datosGrupo();}
+                                               {datosGrupo();
+                                               visualizar();}
                                         }"
                                         render="formulario-grupo:fecha-fin formulario-grupo:fecha-inicio formulario-grupo:descripcion formulario-tabla:tabla-grupo graficas"/>
                             </h:selectOneMenu>
