Desarrollo de las vistas de internal error server

--- a/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-manejable.xhtml
@@ -12,7 +12,7 @@
     <h1>Estimado usuario tenemos un inconveniete contacte a su administrador</h1>
     <h:graphicImage library="img" name="/fondo/no-existe.svg" uk-svg=""/>
     <h:form>
-        <h:commandButton value="regresar" action=""/>
+        <h:commandButton value="regresar" action="#{noManjableControlador.principal}"/>
     </h:form>
 </h:body>
 </html>
