--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -4,10 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
 <ui:composition template="/template/profesor/dashboard-profesor.xhtml">
     <ui:define name="menu">Menu</ui:define>
     <ui:define name="contenido">
+        <h:outputStylesheet library="css" name="/profesor/csv-alumnos.css"/>
         <div class="uk-margin-large-top"><h1 class="uk-margin-top lescuadron">Student Administration -- Add Student by CSV</h1></div>
         <div class="uk-grid" uk-grid="">
             <div class="uk-width-1-3@m">
@@ -43,6 +44,49 @@
                 <ul></ul>
             </div>
         </div>
+        <h:panelGroup styleClass="uk-flex uk-flex-center uk-flex-wrap" >
+            <div class="uk-overflow-auto uk-margin-large-top">
+                <h3 class="uk-text-center">Alumnos Correctos</h3>
+                <table id="tabla-aceptados" class="uk-table uk-table-justify uk-table-small uk-table-middle tablaPrimaria uk-table-hover uk-text-center">
+                    <thead class="thPrimario">
+                    <tr class="">
+                        <th class="uk-text-center" ><span class="letra-tabla uk-text-bold">Apodo</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Nombre</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Apellido Paterno</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Apellido Materno</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Fecha Nacimiento</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Nivel Lenguaje</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Genero</span></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="uk-overflow-auto uk-margin-large-top uk-margin-large-bottom">
+                <h3 class="uk-text-center">Alumnos Incorrectos</h3>
+                <table id="tabla-rechazados" class="uk-table uk-table-justify uk-table-small uk-table-middle tablaPrimaria uk-table-hover uk-text-center" >
+                    <thead class="thPrimario">
+                    <tr>
+                        <th class="uk-text-center" ><span class="letra-tabla uk-text-bold ">Apodo</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Nombre</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Apellido Paterno</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Apellido Materno</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Fecha Nacimiento</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Nivel Lenguaje</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Genero</span></th>
+                        <th class="uk-text-center"><span class="letra-tabla uk-text-bold">Validar</span></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+        </h:panelGroup>
+
+        <ui:remove>
         <div class="uk-grid uk-grid-medium uk-margin-large-bottom" data-uk-grid="">
             <table>
                 <caption>Alumnos correctos</caption>
@@ -91,9 +135,10 @@
                 </tbody>
             </table>
         </div>
+        </ui:remove>
     </ui:define>
     <ui:define name="file-js">
-        <h:outputScript library="js" name="profesor/agregar-csv.js"/>
+        <h:outputScript library="js" name="profesor/agregar-alumnos-csv.js"/>
     </ui:define>
 </ui:composition>
 </html>
