--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -114,13 +114,13 @@
                                 <h:outputText value=" / ${tarea.totalAsignadaGramatica} / ${tarea.totalCalificadasGramatica}" rendered="${tarea.totalAsignadaGramatica ne 0}"/>
                             </h:column>
                             <h:column>
-                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{alumno['more.activity.title.match.image']}</span></f:facet>
+                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{alumno['activities.bar.icon.match']}</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="${tarea.totalAsignadoRelacionar eq 0}"/>
                                 <span><h:outputText value="${tarea.totalRespuestaRelacionar}" rendered="${tarea.totalAsignadoRelacionar ne 0}"/></span>
                                 <h:outputText value=" / ${tarea.totalAsignadoRelacionar}" rendered="${tarea.totalAsignadoRelacionar ne 0}"/>
                             </h:column>
                             <h:column>
-                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{alumno['more.activity.title.order.prayer']}</span></f:facet>
+                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{alumno['activities.title.order.sentences']}</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="#{tarea.totalAsignadaOraciones eq 0}"/>
                                 <span><h:outputText value="#{tarea.totalRespuestaOraciones}" rendered="#{tarea.totalAsignadaOraciones ne 0}"/></span>
                                 <h:outputText value=" / #{tarea.totalAsignadaOraciones}" rendered="#{tarea.totalAsignadaOraciones ne 0}"/>
@@ -132,7 +132,7 @@
                                 <h:outputText value=" / ${tarea.totalAsignadaRelacionarOracion}" rendered="${tarea.totalAsignadaRelacionarOracion ne 0}"/>
                             </h:column>
                             <h:column>
-                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{alumno['more.activity.title.complete.prayers']}</span></f:facet>
+                                <f:facet name="header"><span class="letra-tabla uk-text-bold">#{alumno['activities.title.comple.all.sentences']}</span></f:facet>
                                 <h:outputText pt:uk-icon="ban" rendered="${tarea.totalAsignadaCompletar eq 0}"/>
                                 <span><h:outputText value="${tarea.totalRespuestaCompletar}" rendered="${tarea.totalAsignadaCompletar ne 0}"/></span>
                                 <h:outputText value=" / ${tarea.totalAsignadaCompletar}" rendered="${tarea.totalAsignadaCompletar ne 0}"/>
