Controlador para enviar los alumnos por csv

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -18,7 +18,7 @@
             <ul class="uk-subnav uk-visible@m " uk-margin="">
                 <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="borde-home"/></li>
                 <li class="borde-menu">
-                    <h:form><h:commandLink action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
+                    <h:form><h:commandButton action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
                 </li>
             </ul>
             <ol class="uk-breadcrumb">
