--- a/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/agregar-csv.xhtml
@@ -41,9 +41,11 @@
             <div class="botones uk-width-2-3@m">
                 <span>Seleccione un archivo para cargar alumno</span>
                 <input type="file"/>
-                <ul></ul>
+                <button>Enviar</button>
             </div>
         </div>
+        <progress max="${agregarCsvControlador.totalAlumno}" value="${grupoAlumnoControlador.alumnosAsignado}"></progress>
+        <span>${agregarCsvControlador.alumnosAsignado}/${grupoAlumnoControlador.totalAlumno}</span>
         <h:panelGroup styleClass="uk-flex uk-flex-center uk-flex-wrap" >
             <div class="uk-overflow-auto uk-margin-large-top">
                 <h3 class="uk-text-center">Alumnos Correctos</h3>
@@ -85,57 +87,21 @@
                 </table>
             </div>
         </h:panelGroup>
-
-        <ui:remove>
-        <div class="uk-grid uk-grid-medium uk-margin-large-bottom" data-uk-grid="">
-            <table>
-                <caption>Alumnos correctos</caption>
-                <thead>
-                <tr>
-                    <th>Apodo</th>
-                    <th>Nombre</th>
-                    <th>Apellidos Paterno</th>
-                    <th>Apellido Materno</th>
-                    <th>Fecha Nacimiento</th>
-                    <th>Nivel Lenguaje</th>
-                    <th>Genero</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td colspan="7">
-                        <div class="uk-flex uk-flex-center">
-                            <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
-                        </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <table>
-                <caption>Alumnos incorrectos</caption>
-                <thead>
-                <tr>
-                    <th>Apodo</th>
-                    <th>Nombre</th>
-                    <th>Apellidos Paterno</th>
-                    <th>Apellido Materno</th>
-                    <th>Fecha Nacimiento</th>
-                    <th>Nivel Lenguaje</th>
-                    <th>Genero</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td colspan="7">
-                        <div class="uk-flex uk-flex-center">
-                            <h:graphicImage library="img" name="vacio.svg" height="215" width="243" alt="vacio"/>
-                        </div>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        </ui:remove>
+        <h:form id="formulario-alumno">
+            <h:inputHidden id="apodo" value="#{agregarCsvControlador.alumnoModelo.apodo}"/>
+            <h:inputHidden id="nombre" value="#{agregarCsvControlador.alumnoModelo.nombre}"/>
+            <h:inputHidden id="apellido-paterno" value="#{agregarCsvControlador.alumnoModelo.apellidoPaterno}"/>
+            <h:inputHidden id="apellido-materno" value="#{agregarCsvControlador.alumnoModelo.apellidoMaterno}"/>
+            <h:inputHidden id="fecha-nacimiento" value="#{agregarCsvControlador.alumnoModelo.nacimiento}"/>
+            <h:inputHidden id="sexo" value="#{agregarCsvControlador.alumnoModelo.sexo}"/>
+            <h:inputHidden id="nivel-lenguaje" value="#{agregarCsvControlador.alumnoModelo.nivelLenguajeModelo.valor}"/>
+            <h:commandButton id="enviar" style="display: none">
+                <f:ajax execute="@form" listener="#{agregarCsvControlador.agregarLista()}"/>
+            </h:commandButton>
+            <h:commandButton id="insertar" style="display: none">
+                <f:ajax listener="#{agregarCsvControlador.inserta}"/>
+            </h:commandButton>
+        </h:form>
     </ui:define>
     <ui:define name="file-js">
         <h:outputScript library="js" name="profesor/agregar-alumnos-csv.js"/>
