estilos a cerrar sesion en admin-alumnos

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -17,7 +17,7 @@
         <div class="">
             <ul class="uk-subnav uk-visible@m " uk-margin="">
                 <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="borde-home"/></li>
-                <li class="borde-menu">
+                <li class="borde-menu1">
                     <h:form><h:commandButton action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
                 </li>
             </ul>
