estilos a cerrar sesion en admin-alumnos

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -16,13 +16,13 @@
     <ui:define name="menu">
         <div class="">
             <ul class="uk-subnav uk-visible@m " uk-margin="">
-                <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="borde-home"/></li>
+               <!-- <li ><h:link outcome="tablero" value="#{etiqueta['home']}" styleClass="borde-home"/></li>-->
                 <li class="borde-menu1">
                     <h:form><h:commandButton action="#{profesorControlador.cerrarSesion}" value="Cerrar Sesion"/></h:form>
                 </li>
             </ul>
             <ol class="uk-breadcrumb">
-                <li><a href="#">Principal</a></li>
+                <li><h:link outcome="tablero" value="#{etiqueta['home']}"/></li>
                 <li><span>Student Administration</span></li>
             </ol>
         </div>
